--- a/style.css
+++ b/style.css
@@ -1,100 +1,144 @@
-html, body {
-    width: 100%;
-    height: 100%;
+html,
+body {
+  width: 100%;
+  height: 100%;
 }
 body {
-    margin: 0;
-    background: #fdfdfd;
-    overflow: hidden;
-    perspective: 1000px;
-    font-family: 'Caveat', cursive;
+  margin: 0;
+  background: #fdfdfd;
+  overflow: hidden;
+  perspective: 1000px;
+  font-family: "Caveat", cursive;
 }
 .dot {
-    width: 35px;
-    height: 35px;
-    position: absolute;
-    background: url('img/petal.png');
-    background-size: 100% 100%;
+  width: 35px;
+  height: 35px;
+  position: absolute;
+  background: url("img/petal.png");
+  background-size: 100% 100%;
 }
 #petals {
-    width: 100%;
-    height: 100%;
+  width: 100%;
+  height: 100%;
 }
 .card {
-    width: 100%;
-    max-width: 800px;
-    min-height: 420px;
-    height: fit-content;
-    padding: 15px 30px;
-    position: absolute;
-    top: 50%;
-    right: 50%;
-    bottom: 50%;
-    left: 50%;
-    z-index: 1;
-    transform-style: preserve-3d;
-    perspective: 200px;
-    opacity: 0;
-    background-color: #fff;
-    box-shadow: 0 0 20px rgba(0, 0, 0, .1);
-    transform: translate3d(-40%, -50%, 0) rotateY(10deg);
-    animation: card 2s linear 2s forwards;
+  width: 100%;
+  max-width: 800px;
+  min-height: 420px;
+  height: fit-content;
+  position: absolute;
+  top: 50%;
+  right: 50%;
+  bottom: 50%;
+  left: 50%;
+  z-index: 1;
+  transform-style: preserve-3d;
+  perspective: 2000px;
+  opacity: 0;
+  transform: translate3d(-40%, -50%, 0) rotateY(10deg);
+  animation: card 2s linear 2s forwards;
+}
+
+.content {
+  position: relative;
+  width: 100%;
+  height: 100%;
+
+  transition: transform 1s;
+  transform-style: preserve-3d;
+}
+
+.card.flipped .content {
+  transform-origin: center;
+  transform: rotateY(180deg);
+  transition: transform 0.5s;
+}
+
+.front,
+.back {
+  padding: 15px 30px;
+  position: absolute;
+  height: max-content;
+  width: 100%;
+  background: white;
+  text-align: center;
+  font-size: 60px;
+  border-radius: 5px;
+  backface-visibility: hidden;
+  box-shadow: 0 0 20px rgba(0, 0, 0, 0.1);
+
+}
+
+.back {
+  transform: rotateY(180deg);
 }
 
 .title {
-    margin-bottom: 10px;
-    background-image: linear-gradient(110deg, #45ffea 0%, #8047ca 100%);
-    -webkit-background-clip: text;
-    -webkit-text-fill-color: transparent;
-    color: #ff6945;
-    font-size: 80px;
-    line-height: 1;
-    text-align: center;
+  margin-bottom: 10px;
+  background-image: linear-gradient(110deg, #45ffea 0%, #8047ca 100%);
+  -webkit-background-clip: text;
+  -webkit-text-fill-color: transparent;
+  color: #ff6945;
+  font-size: 80px;
+  line-height: 1;
+  text-align: center;
 }
 .text {
-    margin-bottom: 20px;
-    padding-bottom: 5px;
-    color: #333;
-    font-size: 35px;
-    line-height: 1.2;
+  margin-bottom: 20px;
+  padding-bottom: 5px;
+  color: #333;
+  font-size: 35px;
+  line-height: 1.2;
 }
 .author {
-    background-image: linear-gradient(110deg, #45ffea 0%, #8047ca 100%);
-    -webkit-background-clip: text;
-    -webkit-text-fill-color: transparent;
-    opacity: 0;
-    color: #121212;
-    font-size: 40px;
-    text-align: right;
-    padding-right: 40px;
-    transition: opacity 1s linear;
+  background-image: linear-gradient(110deg, #45ffea 0%, #8047ca 100%);
+  -webkit-background-clip: text;
+  -webkit-text-fill-color: transparent;
+  opacity: 0;
+  color: #121212;
+  font-size: 40px;
+  text-align: right;
+  padding-right: 40px;
+  transition: opacity 1s linear;
+  margin-bottom: 20px;
+}
+
+.giftcard {
+  display: grid;
+  justify-content: center;
+  align-items: center;
+  background-image: url('./img/giftcard.png');
+  background-size: cover;
+  background-repeat: no-repeat;
+  color: white;
+
+  aspect-ratio: 672 / 422;
 }
 
 @keyframes card {
-    from {
-        opacity: 0;
-    }
-    to {
-        opacity: 1;
-    }
+  from {
+    opacity: 0;
+  }
+  to {
+    opacity: 1;
+  }
 }
+
 
 /* CSS */
 .button-53 {
-    display: flex;
-    /* display: none; */
-    opacity: 0;
-    transition: opacity 1s;
-  background-color: #3DD1E7;
-  border: 0 solid #E5E7EB;
+  display: flex;
+  opacity: 0;
+  transition: opacity 1s;
+  background-color: #3dd1e7;
+  border: 0 solid #e5e7eb;
   box-sizing: border-box;
   color: #000000;
-  font-family: ui-sans-serif,system-ui,-apple-system,system-ui,"Segoe UI",Roboto,"Helvetica Neue",Arial,"Noto Sans",sans-serif,"Apple Color Emoji","Segoe UI Emoji","Segoe UI Symbol","Noto Color Emoji";
   font-size: 1rem;
   font-weight: 700;
   justify-content: center;
   line-height: 1.75rem;
-  padding: .75rem 1.65rem;
+  padding: 0.75rem 1.65rem;
   position: relative;
   text-align: center;
   text-decoration: none #000000 solid;
@@ -114,7 +158,7 @@ body {
 }
 
 .button-53:after {
-  content: '';
+  content: "";
   position: absolute;
   border: 1px solid #000000;
   bottom: 4px;
@@ -130,7 +174,46 @@ body {
 
 @media (min-width: 768px) {
   .button-53 {
-    padding: .75rem 3rem;
+    padding: 0.75rem 3rem;
     font-size: 1.25rem;
+  }
+}
+
+/* CSS */
+.button-52 {
+  font-size: 16px;
+  font-weight: 200;
+  letter-spacing: 1px;
+  padding: 13px 20px 13px;
+  outline: 0;
+  border: 1px solid black;
+  cursor: pointer;
+  position: relative;
+  background-color: rgba(0, 0, 0, 0);
+  user-select: none;
+  -webkit-user-select: none;
+  touch-action: manipulation;
+}
+
+.button-52:after {
+  content: "";
+  background-color: #ffe54c;
+  width: 100%;
+  z-index: -1;
+  position: absolute;
+  height: 100%;
+  top: 7px;
+  left: 7px;
+  transition: 0.2s;
+}
+
+.button-52:hover:after {
+  top: 0px;
+  left: 0px;
+}
+
+@media (min-width: 768px) {
+  .button-52 {
+    padding: 13px 50px 13px;
   }
 }
