--- a/style.css
+++ b/style.css
@@ -2,6 +2,7 @@ html,
 body {
   width: 100%;
   height: 100%;
+  box-sizing: border-box;
 }
 body {
   margin: 0;
@@ -9,6 +10,9 @@ body {
   overflow: hidden;
   perspective: 1000px;
   font-family: "Caveat", cursive;
+}
+body * {
+  box-sizing: border-box;
 }
 .dot {
   width: 35px;
@@ -18,25 +22,37 @@ body {
   background-size: 100% 100%;
 }
 #petals {
+  position: absolute;
   width: 100%;
   height: 100%;
 }
-.card {
-  width: 100%;
-  max-width: 800px;
-  min-height: 420px;
-  height: fit-content;
-  position: absolute;
-  top: 50%;
-  right: 50%;
-  bottom: 50%;
-  left: 50%;
+
+
+.megawrapper {
+  position: relative;
+  width: 100vw;
+  height: 100vh;
+  display: grid;
+  place-items: center;
   z-index: 1;
+  grid-template-columns: minmax(300px, 850px);
+  grid-template-rows: minmax(700px, 450px);
+
+  justify-content: center;
+  align-content: center;
+}
+
+.card {
+  /* width: 550px;
+  height: 450px; */
+  width: 100%;
+  height: 100%;
   transform-style: preserve-3d;
   perspective: 2000px;
   opacity: 0;
-  transform: translate3d(-40%, -50%, 0) rotateY(10deg);
+  transform: rotateY(10deg);
   animation: card 2s linear 2s forwards;
+
 }
 
 .content {
@@ -57,9 +73,11 @@ body {
 .front,
 .back {
   padding: 15px 30px;
-  position: absolute;
-  height: max-content;
+
   width: 100%;
+  box-sizing: border-box;
+  height: max-content;
+  position: absolute;
   background: white;
   text-align: center;
   font-size: 60px;
